syntax = "proto3";

package component.v1;

import "component/v1/component.proto";
import "google/type/datetime.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

message ComponentRef {
  string id = 1;
  string name = 2;
  string created_by_id = 3;

  google.type.DateTime created_at = 4;
  google.type.DateTime updated_at = 5;

  component.v1.Component component_config = 6;
  string app_id = 7;
}

message GetComponentRequest {
  string id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
}

message GetComponentResponse {
  ComponentRef component = 1;
}

message GetComponentsByAppRequest {
  string app_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
}

message GetComponentsByAppResponse {
  repeated ComponentRef components = 1;
}

message UpsertComponentRequest {
  string app_id = 1 [
    (validate.rules).string = {
      len: 26,
      ignore_empty: true
    },
    (tagger.tags) = "faker:\"shortID\""
  ];
  string id = 2 [
    (validate.rules).string = {
      len: 26,
      ignore_empty: true
    },
    (tagger.tags) = "faker:\"-\""
  ];
  string name = 3;
  string created_by_id = 4;

  component.v1.Component component_config = 5;
}

message UpsertComponentResponse {
  ComponentRef component = 1;
}

message DeleteComponentRequest {
  string id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
}

message DeleteComponentResponse {
  bool deleted = 1;
}
